--- a/index.html
+++ b/index.html
@@ -65,21 +65,21 @@
         </div>
         <div class="carousel-inner container">
           <div class="carousel-item active ">
-            <img src="img/1.jpg" class="d-block w-100" height="700px" alt="..." >
+            <img src="images/1.jpg" class="d-block w-100" height="700px" alt="..." >
             <div class="carousel-caption d-none d-md-block">
               <h5>First slide label</h5>
               <p>Some representative placeholder content for the first slide.</p>
             </div>
           </div>
           <div class="carousel-item ">
-            <img src="img/2.jpg" class="d-block w-100" alt="...">
+            <img src="images/2.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Second slide label</h5>
               <p>Some representative placeholder content for the second slide.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="img/3.webp" class="d-block w-100" height="600px" alt="...">
+            <img src="images/3.webp" class="d-block w-100" height="600px" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Third slide label</h5>
               <p>Some representative placeholder content for the third slide.</p>
@@ -99,7 +99,7 @@
         <div class="row">
           <div class="col-3 mb-2">
             <div class="card mt-5" style="width: 18rem;">
-              <img src="img/4.jpg" class="card-img-top" alt="...">
+              <img src="images/4.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">oneplus 11 5G </h5>
                 <p class="card-text">50MP+8MP back/16MP front</p>
@@ -112,7 +112,7 @@
           </div>
           <div class="col-3 mb-2">
             <div class="card mt-5" style="width: 18rem;">
-              <img src="img/5.jpg" class="card-img-top" alt="...">
+              <img src="images/5.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">lava yuva 2 </h5>
                 <p class="card-text">13MP AI rear+5MP front</p>
@@ -125,7 +125,7 @@
           </div>
           <div class="col-3">
             <div class="card mt-5" style="width: 18rem;">
-              <img src="img/6.jpg" class="card-img-top" alt="...">
+              <img src="images/6.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">XiuFen 30pro </h5>
                 <p class="card-text">4800 mah battery</p>
@@ -138,7 +138,7 @@
           </div>
           <div class="col-3">
             <div class="card mt-5" style="width: 18rem; height: min-content;">
-              <img src="img/7.jpg" class="card-img-top" alt="...">
+              <img src="images/7.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">nokia G42 5G</h5>
                 <p class="card-text">snapdragon 480+5G</p>
@@ -151,7 +151,7 @@
           </div>
           <div class="col-3">
             <div class="card mt-5" style="width: 18rem;">
-              <img src="img/8.jpg" class="card-img-top" alt="...">
+              <img src="images/8.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">nokia c32</h5>
                 <p class="card-text">50MP dual Ai rear camera</p>
@@ -164,7 +164,7 @@
           </div>
           <div class="col-3">
             <div class="card mt-5" style="width: 18rem;">
-              <img src="img/9.jpg" class="card-img-top" alt="...">
+              <img src="images/9.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">azus ROG phone 2</h5>
                 <p class="card-text">48 MP+13MP</p>
@@ -177,7 +177,7 @@
           </div>
           <div class="col-3">
             <div class="card mt-5" style="width: 18rem;">
-              <img src="img/10.jpg" class="card-img-top" alt="...">
+              <img src="images/10.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">oppo A18</h5>
                 <p class="card-text">4GB+6GB</p>
@@ -190,7 +190,7 @@
           </div>
           <div class="col-3">
             <div class="card mt-5" style="width: 18rem;">
-              <img src="img/11.jpg" class="card-img-top" alt="...">
+              <img src="images/11.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">nokia c12 pro</h5> 
                 <p class="card-text">6GB+128GB</p>
@@ -203,7 +203,7 @@
           </div>
           <div class="col-3">
             <div class="card mt-5" style="width: 18rem;">
-              <img src="img/12.jpg" class="card-img-top" alt="...">
+              <img src="images/12.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title"> i phone 13 pro max </h5>
                 <p class="card-text">color gold</p>
@@ -216,7 +216,7 @@
           </div>
           <div class="col-3">
             <div class="card mt-5" style="width: 18rem;">
-              <img src="img/13.jpg" class="card-img-top" alt="...">
+              <img src="images/13.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">honor 90</h5>
                 <p class="card-text">12 GB+512 GB</p>
@@ -229,7 +229,7 @@
           </div>
           <div class="col-3">
             <div class="card mt-5" style="width: 18rem; height: min-content;">
-              <img src="img/14.jpg" class="card-img-top" alt="...">
+              <img src="images/14.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">itel A49 A661L</h5>
                 <p class="card-text">6.6 inch desplay</p>
@@ -242,7 +242,7 @@
           </div>
           <div class="col-3">
             <div class="card mt-5" style="width: 18rem;">
-              <img src="img/15.jpg" class="card-img-top" alt="...">
+              <img src="images/15.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Lava hero 600i</h5> </h5>
                 <p class="card-text">sleek and stylis desingn</p>
